--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
     </header>
 
-    <section id="mobile-menu">2
+    <section id="mobile-menu">
         <div class="container-mobile">
             <div class="mobile-logo">
                 <img src="images/logo.png" class="img-responsive" alt="logo" />
